improvement(Addressed PR feedback): Explict updates around defining end points